--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,105 @@
-$body-color: blue;
+@import 'reset';
+@import 'extensions';
+@import 'variables';
+@import 'animations';
 
-body {
-  color: $body-color;
+#main {
+  max-width: $grid_max+px;
+  margin: 0;
+  padding: 0;
+
+}
+
+#header {
+  width: 100%;
+  height: 70px;
+  padding: 0 20px;
+  border-bottom: 1px solid #BEC2C5;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: height 0.33s;
+
+  &.scrolled {
+    height: 50px;
+  }
+
+  #branding {
+
+    img { height: 40px; }
+  }
+
+  #navButton {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+
+    span {
+      width: 30px; 
+      height: 0;
+      border: 2px solid $default-fore;
+    }
+  }
+
+  #nav { 
+    width: 100%;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: $default-back;
+
+    li { 
+      height: 0; 
+      transition: height 0.33s 0.33s;
+    }
+
+    a {
+      width: 100%;
+      height: 100%;
+      padding: 0 20px; 
+      opacity: 0;
+      overflow: hidden;
+      pointer-events: none;
+      transition: opacity 0.33s;
+    }
+
+    &.expand {
+
+      #navButton {
+        span:nth-child(1) {
+            transform: rotate(-45deg) translate(-7px,7px);
+        }
+
+        span:nth-child(2) {
+            transform: rotate(-210deg);
+            opacity: 0;
+        }
+
+        span:nth-child(3) {
+            transform: rotate(45deg) translate(-7px,-7px);
+        }
+      }
+
+      li { 
+        height: 40px;
+        transition: height 0.33s;
+      }
+
+      a { 
+        opacity: 1;
+        transition: height 0.33s 0.33s;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: $grid_tab+px ) {
+
+}
+
+@media only screen and (min-width: $grid_max+px ) {
+
+  #main { margin: 0 auto }
 }
