--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,105 +1,76 @@
 @import 'reset';
-@import 'extensions';
 @import 'variables';
-@import 'animations';
+@import 'mixins';
 
-#main {
-  max-width: $grid_max+px;
-  margin: 0;
-  padding: 0;
+/* EXTENSIONS */
 
+%hidden { 
+    display: none !important;
+    visibility: none !important; 
 }
 
-#header {
-  width: 100%;
-  height: 70px;
-  padding: 0 20px;
-  border-bottom: 1px solid #BEC2C5;
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  transition: height 0.33s;
+/* GLOBALS */
 
-  &.scrolled {
-    height: 50px;
-  }
+body {
+    font: 14px "Open Sans", arial,sans-serif;
 
-  #branding {
-
-    img { height: 40px; }
-  }
-
-  #navButton {
-    width: 40px;
-    height: 40px;
-    display: flex;
-    flex-direction: column;
-
-    span {
-      width: 30px; 
-      height: 0;
-      border: 2px solid $default-fore;
+    h1 { 
+        font-size: 30px;
+        color: $primary-highlight;
     }
-  }
 
-  #nav { 
-    width: 100%;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: $default-back;
+    h2 { 
+        font-size: 18px; 
+        font-style: italic;
+        text-indent: 10px;
+    }
 
-    li { 
-      height: 0; 
-      transition: height 0.33s 0.33s;
+    p { 
+        margin: 25px 0;
+        line-height: 1.5; 
     }
 
     a {
-      width: 100%;
-      height: 100%;
-      padding: 0 20px; 
-      opacity: 0;
-      overflow: hidden;
-      pointer-events: none;
-      transition: opacity 0.33s;
+        color: inherit;
+        text-decoration: none;
     }
 
-    &.expand {
+}
 
-      #navButton {
-        span:nth-child(1) {
-            transform: rotate(-45deg) translate(-7px,7px);
-        }
+.pull-right { float: right; }
+.pull-left { float: left; }
+.pull-right::before,
+.pull-right::after,
+.pull-left::before,
+.pull-left::after { clear: both; }
 
-        span:nth-child(2) {
-            transform: rotate(-210deg);
-            opacity: 0;
-        }
+#main {
+    max-width: $grid_max;
+    margin: 70px 0 0;
+    padding: 0;
 
-        span:nth-child(3) {
-            transform: rotate(45deg) translate(-7px,-7px);
-        }
-      }
+}
 
-      li { 
-        height: 40px;
-        transition: height 0.33s;
-      }
+/* LAPTOP */
+@media only screen and (min-width: $grid_lap ) {
 
-      a { 
-        opacity: 1;
-        transition: height 0.33s 0.33s;
-      }
+    body {
+
+        p { margin: 35px 0; }
     }
-  }
+
+    #main { margin: 100px auto 0; }
 }
 
-@media only screen and (min-width: $grid_tab+px ) {
+/* DESKTOP */
+@media only screen and (min-width: $grid_desk ) {
 
+  #main { margin: 100px auto 0; }
 }
 
-@media only screen and (min-width: $grid_max+px ) {
 
-  #main { margin: 0 auto }
-}
+@import 'header';
+
+@import 'aside';
+
+@import 'section';
